--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "bootstrap-vue": "^2.22.0",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "crypo": "^0.1.4",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "maxmind": "^4.3.6",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "nconf": "^0.12.0",
     "path": "^0.12.7",
     "vue": "^3.2.37"
